# envdiff

./: .gitignore  README.md  example-input.yaml  example-output.json  example-report.txt  main.py  pyproject.toml
envdiff/: __init__.py  analysis.py  cli.py  container.py  diff.py  report_formatter.py
tests/: test_analysis.py  test_container.py  test_diff.py  test_formatter.py
