[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envdiff"
version = "0.1.0"
description = "Analyze container environment differences and generate JSON reports."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "chuyii", email = "contact@chuyii.net"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
]

[project.scripts]
envdiff = "envdiff.cli:main"
